--- a/src/assets/styles/module/financial_summary.scss
+++ b/src/assets/styles/module/financial_summary.scss
@@ -1,30 +1,27 @@
-.financial-summary {
-  margin-top: 20px;
-  margin-left: 50px;
-}
-
-  .financial-summary__revenues, .financial-summary__expense, .financial-summary__result {
-    margin: 0px 70px
-  }
 
   .financial-summary__text {
     color: $color-subtitle-default;
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 
   .financial-summary__value {
     color: $color-title-default;
-    font-size: 24px;
+    font-size: 2.4rem;
   }
 
   .financial-summary__item {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
   }
 
   .financial-summary__title {
     color: $color-title-default;
     font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 20px;
+
+  }
+
+  .financial__icons {
+    height: 100px;
+    width: 100px;
   }
