--- a/src/assets/styles/module/transactions.scss
+++ b/src/assets/styles/module/transactions.scss
@@ -1,38 +1,33 @@
 @import '/src/assets/styles/base/_variables.scss';
 
 .transactions-content__title{
-  margin: 20px 40px;
   color: $color-title-default;
+  font-size: 2.4rem;
 }
 
 .transactions-content__subtitle {
-  margin-left: 40px;
   color: $color-subtitle-default;
   font-weight: 600;
+  font-size: 1.8rem;
 }
 
 .second-content {
   display: flex;
   justify-content: space-between;
-  margin: 10px 40px;
 }
 
-.transactions-content {
-  width: 100%;
+.transactions-content  {
+  padding: 2rem 5rem;
   background-color: white;
-  height: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border-radius: 25px;
+  border-radius: 2rem;
 }
 
 .second-content__btn {
-  width: 20%;
   background-color: #1A74CC;
-  border-radius: 10px;
+  border-radius: 1rem;
   border: none;
   color: white;
-  height: 45px;
+  padding: 1.5rem 2rem;
 }
 
 table {
@@ -44,12 +39,14 @@ thead tr {
 }
 
 th, td {
-  padding: 20px;
 }
 
 .transactions-table {
-  width: 95%;
-  margin-top: 70px;
-  margin-left: 20px;
   color: $color-subtitle-default;
+  width: 100%;
+  margin-top: 5rem;
+}
+
+.transactions-table__head {
+  font-size: 1.4rem;
 }
